--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,4 +2,4 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings = ['@chainlink/=lib/chainlink/']
+remappings = ['@chainlink/=lib/chainlink/', '@foundry-devops=lib/foundry-devops']
