--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-# Compiler files
 contracts/cache/
 contracts/out/
-contracts/!/broadcast
-contracts/broadcast/*/31337/
-contracts/broadcast/**/dry-run/
+contracts/broadcast/*
+contracts/.env
 
-# Dotenv file
-.env
+frontend/logs
+frontend/*.log
+frontend/npm-debug.log*
+frontend/node_modules
+frontend/dist
+frontend/dist-ssr
+frontend/*.local
+frontend/.vscode/*
